<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/txt_description_image"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:src="@mipmap/ic_icon_round"
            >
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/register_title"
            android:textAllCaps="true"
            android:textSize="16sp"
            >
        </TextView>

        <!-- ========= REGISTER RADIO BUTTON TYPE USER ========= -->
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_btn_user"
                    android:textSize="10pt"
                    android:layout_marginLeft="35sp"
                    android:layout_marginRight="15sp"
                    />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_btn_worker"
                    android:textSize="10pt"
                    android:layout_marginRight="20sp"
                    />
            </LinearLayout>
        </RadioGroup>

        <!-- ========= REGISTER NAME ========= -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_register_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:hint="@string/register_username"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_register_username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- ========= REGISTER SURNAME ========= -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_register_surname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:hint="@string/register_surname"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_register_surname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- ========= REGISTER EMAIL ========= -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_regiter_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:hint="@string/register_email"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_register_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- ========= REGISTER PHONE ========= -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_register_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_phone"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_register_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- ========= REGISTER PASSWORD ========= -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_register_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input-password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- ========= REGISTER BUTTON ========= -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register_user"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/btn_color"
                android:text="@string/btn_register_user"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

    </LinearLayout>



</ScrollView>